--- a/README.Rmd
+++ b/README.Rmd
@@ -69,7 +69,8 @@ print(dot_prod)
 
 
 
-Visualization
+## Visualization
+
 You can visualize the overlapping non-zero elements of two sparse vectors using the plot() method. This plots position (x-axis) vs value (y-axis) for indices where both vectors are non-zero.
 
 ``` {r example2}
